--- a/assign/assign2.html
+++ b/assign/assign2.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width initial-scale=1">
 	<title>Module-3 assignment</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/styles1.css">
 </head>
 <body>
 	<header>
@@ -90,7 +90,7 @@ Sushi is sometimes confused with sashimi, a related dish in Japanese cuisine tha
 	</footer>
 	<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/script.js"></script>
+	<script src="js/script1.js"></script>
 
 </body>
 </html>
